# EMPPIS_LABS

./: .city_graph  .plot  .plot3d  Bocchiemark.hpp  CMakeLists.txt  Plot.h  README.md  Random.hpp  city_graph.py  lab1.hpp  lab2.hpp  lab3.hpp  lab4.hpp  lab5.hpp  lab6.hpp  lab7.hpp  lab8.hpp  main.cpp  plot.py  plot3d.py
отчеты/: 1.docx  2.docx  3.docx  5.docx  6.docx  7.docx  8.docx
